<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsMenu"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/settingsText"
        android:textColor="@color/minion_blue_dark"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinner_boards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/boardSizeText"
        app:layout_constraintTop_toBottomOf="@+id/settingsText" />

    <Spinner
        android:id="@+id/spinner_minions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/numMinionsText"
        app:layout_constraintTop_toBottomOf="@+id/spinner_boards" />

    <TextView
        android:id="@+id/boardSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/board_size_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/minion_blue_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsText" />

    <TextView
        android:id="@+id/numMinionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/minions_num_text"
        android:textColor="@color/minion_blue_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardSizeText" />

    <Button
        android:id="@+id/resetPlays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:onClick="clearGames"
        android:text="@string/erase_times_played_text"
        android:textColor="@color/minion_blue_dark"
        android:background="@drawable/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numMinionsText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resetPlays"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/minions_settigs" />
</androidx.constraintlayout.widget.ConstraintLayout>